# -Tranquility-

./: .gitignore  BinaryPartitionStrategy.cpp  BinaryPartitionStrategy.h  CMakeLists.txt  Card.cpp  Card.h  GameManager.cpp  GameManager.h  HumanPlayer.cpp  HumanPlayer.h  PlayArea.cpp  PlayArea.h  Player.h  PlayerAgent.h  PlayerStrategy.h  main.cpp
